<resources>
    <string name="app_name">NTMDB</string>
    <string name="dummy_text_on_boarding">Laborum ad anim Lorem eu tempor. Sunt fugiat exercitation magna eiusmod pariatur ut.</string>
    <string name="tv_easy_explore">Easy Explore</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_forgot_password">Forgot Password ?</string>
    <string name="txt_don_t_have_an_account">Don’t Have an account ?</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_create_account">Create Account</string>
    <string name="txt_istruction_sign_up">Please fill the input below here</string>
    <string name="txt_full_name">Full Name</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_already_have_an_account">Already Have an account ?</string>
    <string name="txt_15_march_2021">15, March 2021</string>
    <string name="txt_not_the_movie_db">Not The Movie DB</string>
    <string name="txt_movie_of_the_week">Movie of the Week</string>
    <string name="txt_imageview">Image View</string>
    <string name="txt_angels_demons"><![CDATA[Angels & Demons]]></string>
    <string name="txt_all">All</string>
    <string name="txt_animation">Animation</string>
    <string name="txt_horor">Horor</string>
    <string name="txt_comedy">Comedy</string>
    <string name="txt_fantasy">Fantasy</string>
    <string name="txt_thriller">Thriller</string>
    <string name="txt_lucifer">Lucifer</string>
    <string name="txt_synopsis">Lucifer Morningstar has decided he\'s had enough of being the dutiful servant in Hell and decides to spend some time on Earth to better understand humanity.</string>
    <string name="txt_thriller_mystery">Thriller, Mystery</string>
    <string name="txt_may_13_2009">May 13, 2009</string>
    <string name="txt_6_7">6.7</string>
    <string name="txt_imagebutton">Image Button</string>
    <string name="txt_ivan_martinez">Ivan Martinez</string>
    <string name="txt_ivan_email">ivanmartinez@gmail.com</string>
    <string name="txt_preference">Preference</string>
    <string name="txt_dark_mode">Dark Mode</string>
    <string name="txt_notifications">Notifications</string>
    <string name="txt_account">Account</string>
    <string name="txt_edit_account">Edit Account</string>
    <string name="txt_change_account">Change Account</string>
    <string name="txt_language">Language</string>
    <string name="txt_bookmark">Bookmark</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_privacy_and_setting_help">Privacy and Setting Help</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_overview">Overview</string>
    <string name="txt_synopsis_dummy">Harvard symbologist Robert Langdon is recruited by the Vatican to investigate the apparent return of the Illuminati - a secret, underground organization - after four cardinals are kidnapped on the night of the papal conclave.</string>
    <string name="txt_director">Director</string>
    <string name="txt_ron_howard">Ron Howard</string>
    <string name="txt_genre">Genre</string>
    <string name="txt_relese_date">Relese Date</string>
    <string name="txt_rating">Rating</string>
    <string name="txt_trailer">Trailer</string>
    <string name="txt_next">Next</string>
    <string name="tv_skip">Skip</string>
    <string name="txt_take_a_look">Take A Look</string>
    <string name="txt_get_started">Get Started</string>
    <string name="txt_forget_password">Forget Password</string>
    <string name="tv_sub_forgot">Please fill the input below here</string>
    <string name="txt_error">Not Empty</string>
    <string name="txt_pass_mismatch">Password Missmatch</string>
    <string name="txt_users">Users</string>
</resources>