<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_back_path"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_250dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_path_dummy" />

        <ImageButton
            android:id="@+id/ib_back_detail"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/button_shape"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_share_detail"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:background="@drawable/button_shape"
            android:src="@drawable/ic_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/rl_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_630dp"
            android:background="@drawable/background_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_back_path">

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_15dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/txt_angels_demons"
                android:textColor="@color/main_color"
                android:textSize="@dimen/_24sp" />

            <ImageView
                android:id="@+id/iv_poster_detail"
                android:layout_width="160dp"
                android:layout_height="@dimen/_240dp"
                android:layout_below="@+id/tv_title_detail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/main_banner"/>
            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_overview"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/main_color"
                android:textSize="@dimen/_20sp"
                android:layout_below="@id/iv_poster_detail"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_15dp"/>
            <TextView
                android:id="@+id/tv_synopsis_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_synopsis_dummy"
                android:maxLines="4"
                android:textColor="@color/text_color"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_below="@id/tv_overview"/>
            <TextView
                android:id="@+id/tv_language_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_director"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/main_color"
                android:textSize="@dimen/_20sp"
                android:layout_below="@id/tv_synopsis_detail"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"/>
            <TextView
                android:id="@+id/tv_language_type_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ron_howard"
                android:textColor="@color/text_color"
                android:layout_below="@id/tv_language_detail"
                android:layout_marginStart="@dimen/_20dp"/>
            <TextView
                android:id="@+id/tv_genre_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_genre"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/main_color"
                android:textSize="@dimen/_20sp"
                android:layout_below="@id/tv_language_type_detail"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_15dp"/>
            <TextView
                android:id="@+id/tv_genre_type_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_thriller_mystery"
                android:textColor="@color/text_color"
                android:layout_below="@id/tv_genre_detail"
                android:layout_marginStart="@dimen/_20dp"/>
            <TextView
                android:id="@+id/tv_release_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_relese_date"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/main_color"
                android:textSize="@dimen/_20sp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tv_synopsis_detail"
                android:layout_marginEnd="@dimen/_50dp"
                android:layout_marginTop="@dimen/_10dp"/>
            <TextView
                android:id="@+id/tv_release_date_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_may_13_2009"
                android:textColor="@color/text_color"
                android:layout_below="@id/tv_release_detail"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_60dp"/>
            <TextView
                android:id="@+id/tv_rating_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_rating"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/main_color"
                android:textSize="@dimen/_20sp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tv_release_date_detail"
                android:layout_marginEnd="@dimen/_70dp"
                android:layout_marginTop="@dimen/_15dp"/>
            <TextView
                android:id="@+id/tv_rating_imdb_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_6_7"
                android:textColor="@color/text_color"
                android:layout_below="@id/tv_rating_detail"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_90dp"/>
            <LinearLayout
                android:id="@+id/ll_trailer_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_rating_imdb_detail"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_70dp"
                android:layout_marginTop="@dimen/_10dp"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/ib_play_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_play_button"
                    android:background="@color/background_black"/>
                <TextView
                    android:id="@+id/tv_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_trailer"
                    android:textColor="@color/main_color"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>