<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_black">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_movie"
        android:layout_width="@dimen/_84dp"
        android:layout_height="@dimen/_122dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_20dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_item_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_imageview"
            android:scaleType="centerCrop"
            android:src="@drawable/lucifer_poster" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:fontFamily="@font/poppins_medium"
        android:maxLines="1"
        android:text="@string/txt_lucifer"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cv_item_movie"
        app:layout_constraintTop_toTopOf="@+id/cv_item_movie" />

    <TextView
        android:id="@+id/tv_synopsis_items"
        android:layout_width="@dimen/_263dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:maxLines="4"
        android:text="@string/txt_synopsis"
        android:textColor="@color/text_secondary"
        android:textSize="@dimen/_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cv_item_movie"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_items" />

    <TextView
        android:id="@+id/tv_release_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/txt_may_13_2009"
        android:maxWidth="@dimen/_85dp"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cv_item_movie"
        app:layout_constraintTop_toBottomOf="@+id/tv_synopsis_items" />

    <TextView
        android:id="@+id/tv_rating_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/txt_6_7"
        android:textColor="@color/text_color"
        android:maxWidth="@dimen/_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toEndOf="@+id/tv_release_items"
        app:layout_constraintTop_toBottomOf="@+id/tv_synopsis_items" />
</androidx.constraintlayout.widget.ConstraintLayout>