<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.NewsApp.light"
    android:background="@color/background_black"
    tools:context=".activity.ThirdOnBoardingActivity">
    <ImageView
        android:id="@+id/iv_third_ob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iv_third_onboarding" />

    <TextView
        android:id="@+id/tv_third_ob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:text="@string/txt_take_a_look"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_third_ob"/>

    <TextView
        android:id="@+id/tv_dummy_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_text_on_boarding"
        android:textColor="@color/text_color"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_third_ob" />

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:text="@string/txt_get_started"
        app:layout_constraintBottom_toTopOf="@+id/iv_third_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dummy_third" />

    <ImageView
        android:id="@+id/iv_third_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30dp"
        android:src="@drawable/ic_second_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>